# rust_points

./: .gitmodules  Cargo.toml  puntos.tsp  puntos_test.tsp
point_files/: d657.tsp  puntos_30000.tsp  puntos_50000.tsp  puntos_80000.tsp  puntos_rand_small_0.tsp  puntos_rand_small_1.tsp  puntos_rand_small_2.tsp  puntos_rand_small_3.tsp  puntos_rand_small_4.tsp  puntos_rand_small_5.tsp  puntos_rand_small_6.tsp  puntos_rand_small_7.tsp  puntos_rand_small_8.tsp  puntos_rand_small_9.tsp
src/: coord.rs  dyv_alt.rs  dyv_it.rs  dyv_mt.rs  dyv_simd.rs  dyv_st.rs  main.rs  punto.rs  test.rs
