[package]
name = "puntitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks=false
opt-level=0
debug=true

[profile.release]
opt-level = 2
lto = "fat"

[dependencies]
packed_simd = "0.3.9"
rand = "0.8.5"
